--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  pool: 5
+  username: lerssett
+  password: Nail30031812
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: 5
-
 development:
   <<: *default
   database: address_book_development
@@ -81,5 +82,3 @@ test:
 production:
   <<: *default
   database: address_book_production
-  username: address_book
-  password: <%= ENV['ADDRESS_BOOK_DATABASE_PASSWORD'] %>
